# Virtual-Notes-Assistant

./: README.md  pyproject.toml  setup.py  templates.py
